--- a/routes/kcy-wky.html
+++ b/routes/kcy-wky.html
@@ -167,112 +167,99 @@
     <button class="button" onclick="redirectToFullTimeTable()">View Full Time Table</button>
     <script>
         const busTimes = [
-            { time: "05:00", destination: "Vadakanchery", viaVazhani: false },
-            { time: "05:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "05:15", destination: "Vadakanchery", viaVazhani: false },
-            { time: "05:45", destination: "Vadakanchery", viaVazhani: false },
-            { time: "05:55", destination: "Vadakanchery", viaVazhani: true },
-            { time: "06:00", destination: "Vadakanchery", viaVazhani: false },
-            { time: "06:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "06:25", destination: "Vadakanchery", viaVazhani: false },
-            { time: "06:40", destination: "Vadakanchery", viaVazhani: false },
-            { time: "06:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "07:05", destination: "Vadakanchery", viaVazhani: false },
-            { time: "07:15", destination: "Vadakanchery", viaVazhani: false },
-            { time: "07:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "07:30", destination: "Vadakanchery", viaVazhani: false },
-            { time: "07:35", destination: "Vadakanchery", viaVazhani: false },
-            { time: "07:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "08:00", destination: "Vadakanchery", viaVazhani: false },
-            { time: "08:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "08:15", destination: "Vadakanchery", viaVazhani: false },
-            { time: "08:25", destination: "Vadakanchery", viaVazhani: false },
-            { time: "08:35", destination: "Vadakanchery", viaVazhani: false },
-            { time: "08:45", destination: "Vadakanchery", viaVazhani: false },
-            { time: "08:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "09:05", destination: "Vadakanchery", viaVazhani: false },
-            { time: "09:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "09:25", destination: "Vadakanchery", viaVazhani: false },
-            { time: "09:40", destination: "Vadakanchery", viaVazhani: false },
-            { time: "09:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "10:00", destination: "Vadakanchery", viaVazhani: false },
-            { time: "10:05", destination: "Vadakanchery", viaVazhani: false },
-            { time: "10:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "10:25", destination: "Vadakanchery", viaVazhani: false },
-            { time: "10:35", destination: "Vadakanchery", viaVazhani: false },
-            { time: "10:45", destination: "Vadakanchery", viaVazhani: false },
-            { time: "10:55", destination: "Vadakanchery", viaVazhani: false },
-            { time: "11:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "11:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "11:40", destination: "Vadakanchery", viaVazhani: false },
-            { time: "11:55", destination: "Vadakanchery", viaVazhani: false },
-            { time: "12:05", destination: "Vadakanchery", viaVazhani: false },
-            { time: "12:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "12:35", destination: "Vadakanchery", viaVazhani: false },
-            { time: "12:55", destination: "Vadakanchery", viaVazhani: false },
-            { time: "13:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "13:25", destination: "Vadakanchery", viaVazhani: false },
-            { time: "13:35", destination: "Vadakanchery", viaVazhani: false },
-            { time: "13:55", destination: "Vadakanchery", viaVazhani: false },
-            { time: "14:05", destination: "Vadakanchery", viaVazhani: false },
-            { time: "14:15", destination: "Vadakanchery", viaVazhani: false },
-            { time: "14:25", destination: "Vadakanchery", viaVazhani: false },
-            { time: "14:35", destination: "Vadakanchery", viaVazhani: false },
-            { time: "14:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "15:05", destination: "Vadakanchery", viaVazhani: false },
-            { time: "15:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "15:30", destination: "Vadakanchery", viaVazhani: false },
-            { time: "15:40", destination: "Vadakanchery", viaVazhani: false },
-            { time: "15:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "16:00", destination: "Vadakanchery", viaVazhani: false },
-            { time: "16:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "16:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "16:30", destination: "Vadakanchery", viaVazhani: false },
-            { time: "16:40", destination: "Vadakanchery", viaVazhani: false },
-            { time: "16:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "17:00", destination: "Vadakanchery", viaVazhani: false },
-            { time: "17:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "17:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "17:30", destination: "Vadakanchery", viaVazhani: false },
-            { time: "17:40", destination: "Vadakanchery", viaVazhani: false },
-            { time: "17:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "18:00", destination: "Vadakanchery", viaVazhani: false },
-            { time: "18:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "18:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "18:30", destination: "Vadakanchery", viaVazhani: false },
-            { time: "18:40", destination: "Vadakanchery", viaVazhani: false },
-            { time: "18:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "19:00", destination: "Vadakanchery", viaVazhani: false },
-            { time: "19:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "19:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "19:30", destination: "Vadakanchery", viaVazhani: false },
-            { time: "19:40", destination: "Vadakanchery", viaVazhani: false },
-            { time: "19:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "20:00", destination: "Vadakanchery", viaVazhani: false },
-            { time: "20:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "20:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "20:30", destination: "Vadakanchery", viaVazhani: false },
-            { time: "20:40", destination: "Vadakanchery", viaVazhani: false },
-            { time: "20:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "21:00", destination: "Vadakanchery", viaVazhani: false },
-            { time: "21:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "21:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "21:30", destination: "Vadakanchery", viaVazhani: false },
-            { time: "21:40", destination: "Vadakanchery", viaVazhani: false },
-            { time: "21:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "22:00", destination: "Vadakanchery", viaVazhani: false },
-            { time: "22:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "22:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "22:30", destination: "Vadakanchery", viaVazhani: false },
-            { time: "22:40", destination: "Vadakanchery", viaVazhani: false },
-            { time: "22:50", destination: "Vadakanchery", viaVazhani: false },
-            { time: "23:00", destination: "Vadakanchery", viaVazhani: false },
-            { time: "23:10", destination: "Vadakanchery", viaVazhani: false },
-            { time: "23:20", destination: "Vadakanchery", viaVazhani: false },
-            { time: "23:30", destination: "Vadakanchery", viaVazhani: false },
-            { time: "23:40", destination: "Vadakanchery", viaVazhani: false },
-            { time: "23:50", destination: "Vadakanchery", viaVazhani: false }
-        ];
+    { time: "05:00", destination: "Vadakanchery", viaVazhani: false },
+    { time: "05:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "05:15", destination: "Vadakanchery", viaVazhani: false },
+    { time: "05:30", destination: "Vadakanchery", viaVazhani: false },
+    { time: "05:45", destination: "Vadakanchery Vazhani", viaVazhani: true },
+    { time: "05:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "06:00", destination: "Vadakanchery", viaVazhani: false },
+    { time: "06:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "06:25", destination: "Vadakanchery", viaVazhani: false },
+    { time: "06:40", destination: "Vadakanchery", viaVazhani: false },
+    { time: "06:50", destination: "Vadakanchery", viaVazhani: true },
+    { time: "07:05", destination: "Vadakanchery", viaVazhani: false },
+    { time: "07:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "07:15", destination: "Vadakanchery", viaVazhani: false },
+    { time: "07:20", destination: "Vadakanchery", viaVazhani: false },
+    { time: "07:30", destination: "Vadakanchery", viaVazhani: false },
+    { time: "07:35", destination: "Vadakanchery", viaVazhani: false },
+    { time: "07:50", destination: "Vadakanchery", viaVazhani: false },
+    { time: "08:00", destination: "Vadakanchery", viaVazhani: false },
+    { time: "08:10", destination: "Vadakanchery", viaVazhani: true },
+    { time: "08:15", destination: "Vadakanchery", viaVazhani: false },
+    { time: "08:25", destination: "Vadakanchery", viaVazhani: false },
+    { time: "08:35", destination: "Vadakanchery", viaVazhani: false },
+    { time: "08:45", destination: "Vadakanchery", viaVazhani: false },
+    { time: "08:50", destination: "Vadakanchery", viaVazhani: false },
+    { time: "09:05", destination: "Vadakanchery", viaVazhani: false },
+    { time: "09:20", destination: "Vadakanchery", viaVazhani: false },
+    { time: "09:25", destination: "Vadakanchery", viaVazhani: false },
+    { time: "09:40", destination: "Vadakanchery", viaVazhani: false },
+    { time: "09:50", destination: "Vadakanchery", viaVazhani: false },
+    { time: "10:00", destination: "Vadakanchery", viaVazhani: true },
+    { time: "10:05", destination: "Vadakanchery", viaVazhani: false },
+    { time: "10:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "10:20", destination: "Vadakanchery", viaVazhani: false },
+    { time: "10:25", destination: "Vadakanchery", viaVazhani: false },
+    { time: "10:35", destination: "Vadakanchery", viaVazhani: false },
+    { time: "10:45", destination: "Vadakanchery", viaVazhani: false },
+    { time: "10:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "11:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "11:20", destination: "Vadakanchery", viaVazhani: false },
+    { time: "11:40", destination: "Vadakanchery", viaVazhani: false },
+    { time: "11:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "12:10", destination: "Vadakanchery", viaVazhani: true },
+    { time: "12:25", destination: "Vadakanchery", viaVazhani: true },
+    { time: "12:30", destination: "Vadakanchery", viaVazhani: true },
+    { time: "12:45", destination: "Vadakanchery", viaVazhani: false },
+    { time: "13:05", destination: "Vadakanchery", viaVazhani: false },
+    { time: "13:15", destination: "Vadakanchery", viaVazhani: false },
+    { time: "13:30", destination: "Vadakanchery", viaVazhani: false },
+    { time: "13:45", destination: "Vadakanchery Vazhani", viaVazhani: true },
+    { time: "14:00", destination: "Vadakanchery", viaVazhani: false },
+    { time: "14:15", destination: "Vadakanchery Vazhani", viaVazhani: true },
+    { time: "14:30", destination: "Vadakanchery", viaVazhani: false },
+    { time: "14:45", destination: "Vadakancherry", viaVazhani: false },
+    { time: "14:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "15:05", destination: "Vadakanchery", viaVazhani: false },
+    { time: "15:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "15:35", destination: "Vadakanchery", viaVazhani: false },
+    { time: "15:50", destination: "Vadakancherry", viaVazhani: false },
+    { time: "16:05", destination: "Vadakanchery", viaVazhani: false },
+    { time: "16:15", destination: "Vadakancherry, Vazhani", viaVazhani: true },
+    { time: "16:30", destination: "Vadakanchery", viaVazhani: false },
+    { time: "16:45", destination: "Vadakanchery", viaVazhani: false },
+    { time: "17:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "17:25", destination: "Vadakanchery", viaVazhani: false },
+    { time: "17:40", destination: "Vadakanchery", viaVazhani: false },
+    { time: "17:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "18:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "18:25", destination: "Vadakanchery", viaVazhani: false },
+    { time: "18:40", destination: "Vadakanchery", viaVazhani: false },
+    { time: "18:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "19:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "19:25", destination: "Vadakanchery", viaVazhani: false },
+    { time: "19:40", destination: "Vadakanchery", viaVazhani: false },
+    { time: "19:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "20:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "20:25", destination: "Vadakanchery", viaVazhani: false },
+    { time: "20:40", destination: "Vadakanchery", viaVazhani: false },
+    { time: "20:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "21:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "21:25", destination: "Vadakanchery", viaVazhani: false },
+    { time: "21:40", destination: "Vadakanchery", viaVazhani: false },
+    { time: "21:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "22:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "22:25", destination: "Vadakanchery", viaVazhani: false },
+    { time: "22:40", destination: "Vadakanchery", viaVazhani: false },
+    { time: "22:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "23:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "23:25", destination: "Vadakanchery", viaVazhani: false },
+    { time: "23:40", destination: "Vadakanchery", viaVazhani: false },
+    { time: "23:55", destination: "Vadakanchery", viaVazhani: false }
+];
+
 
 
         function getNextBusTime(currentTime, busTimes) {
