--- a/routes/kcy-wky.html
+++ b/routes/kcy-wky.html
@@ -171,13 +171,13 @@
     { time: "05:10", destination: "Vadakanchery", viaVazhani: false },
     { time: "05:15", destination: "Vadakanchery", viaVazhani: false },
     { time: "05:30", destination: "Vadakanchery", viaVazhani: false },
-    { time: "05:45", destination: "Vadakanchery Vazhani", viaVazhani: true },
+    { time: "05:45", destination: "Vadakancheri Vazhani", viaVazhani: true },
     { time: "05:55", destination: "Vadakanchery", viaVazhani: false },
     { time: "06:00", destination: "Vadakanchery", viaVazhani: false },
     { time: "06:10", destination: "Vadakanchery", viaVazhani: false },
     { time: "06:25", destination: "Vadakanchery", viaVazhani: false },
     { time: "06:40", destination: "Vadakanchery", viaVazhani: false },
-    { time: "06:50", destination: "Vadakanchery", viaVazhani: true },
+    { time: "06:50", destination: "Vadakancherry", viaVazhani: false },
     { time: "07:05", destination: "Vadakanchery", viaVazhani: false },
     { time: "07:10", destination: "Vadakanchery", viaVazhani: false },
     { time: "07:15", destination: "Vadakanchery", viaVazhani: false },
@@ -186,7 +186,7 @@
     { time: "07:35", destination: "Vadakanchery", viaVazhani: false },
     { time: "07:50", destination: "Vadakanchery", viaVazhani: false },
     { time: "08:00", destination: "Vadakanchery", viaVazhani: false },
-    { time: "08:10", destination: "Vadakanchery", viaVazhani: true },
+    { time: "08:10", destination: "Vadakancherry", viaVazhani: false },
     { time: "08:15", destination: "Vadakanchery", viaVazhani: false },
     { time: "08:25", destination: "Vadakanchery", viaVazhani: false },
     { time: "08:35", destination: "Vadakanchery", viaVazhani: false },
@@ -197,7 +197,7 @@
     { time: "09:25", destination: "Vadakanchery", viaVazhani: false },
     { time: "09:40", destination: "Vadakanchery", viaVazhani: false },
     { time: "09:50", destination: "Vadakanchery", viaVazhani: false },
-    { time: "10:00", destination: "Vadakanchery", viaVazhani: true },
+    { time: "10:00", destination: "Vadakancherry", viaVazhani: false },
     { time: "10:05", destination: "Vadakanchery", viaVazhani: false },
     { time: "10:10", destination: "Vadakanchery", viaVazhani: false },
     { time: "10:20", destination: "Vadakanchery", viaVazhani: false },
@@ -209,16 +209,16 @@
     { time: "11:20", destination: "Vadakanchery", viaVazhani: false },
     { time: "11:40", destination: "Vadakanchery", viaVazhani: false },
     { time: "11:55", destination: "Vadakanchery", viaVazhani: false },
-    { time: "12:10", destination: "Vadakanchery", viaVazhani: true },
-    { time: "12:25", destination: "Vadakanchery", viaVazhani: true },
-    { time: "12:30", destination: "Vadakanchery", viaVazhani: true },
+    { time: "12:10", destination: "Vadakancheri", viaVazhani: false },
+    { time: "12:25", destination: "Vadakancheri", viaVazhani: false },
+    { time: "12:30", destination: "Vadakancherry", viaVazhani: false },
     { time: "12:45", destination: "Vadakanchery", viaVazhani: false },
     { time: "13:05", destination: "Vadakanchery", viaVazhani: false },
     { time: "13:15", destination: "Vadakanchery", viaVazhani: false },
     { time: "13:30", destination: "Vadakanchery", viaVazhani: false },
-    { time: "13:45", destination: "Vadakanchery Vazhani", viaVazhani: true },
+    { time: "13:45", destination: "Vadakancheri Vazhani", viaVazhani: true },
     { time: "14:00", destination: "Vadakanchery", viaVazhani: false },
-    { time: "14:15", destination: "Vadakanchery Vazhani", viaVazhani: true },
+    { time: "14:15", destination: "Vadakancheri Vazhani", viaVazhani: true },
     { time: "14:30", destination: "Vadakanchery", viaVazhani: false },
     { time: "14:45", destination: "Vadakancherry", viaVazhani: false },
     { time: "14:55", destination: "Vadakanchery", viaVazhani: false },
@@ -227,7 +227,7 @@
     { time: "15:35", destination: "Vadakanchery", viaVazhani: false },
     { time: "15:50", destination: "Vadakancherry", viaVazhani: false },
     { time: "16:05", destination: "Vadakanchery", viaVazhani: false },
-    { time: "16:15", destination: "Vadakancherry, Vazhani", viaVazhani: true },
+    { time: "16:15", destination: "Vadakancheri, Vazhani", viaVazhani: true },
     { time: "16:30", destination: "Vadakanchery", viaVazhani: false },
     { time: "16:45", destination: "Vadakanchery", viaVazhani: false },
     { time: "17:10", destination: "Vadakanchery", viaVazhani: false },
@@ -258,7 +258,10 @@
     { time: "23:25", destination: "Vadakanchery", viaVazhani: false },
     { time: "23:40", destination: "Vadakanchery", viaVazhani: false },
     { time: "23:55", destination: "Vadakanchery", viaVazhani: false }
-];
+    ];
+
+
+
 
 
 
