--- a/routes/wky-kcy.html
+++ b/routes/wky-kcy.html
@@ -215,86 +215,83 @@
 
     <script>
         const busTimes = [
-            { time: "05:30", destination: "Kecheri, Puthuruthi" },
             { time: "06:00", destination: "Kecheri, Parapur, Oorakam" },
-            { time: "06:05", destination: "Kecheri" },
-            { time: "06:15", destination: "Kecheri, Mattam, Pavaratty" },
             { time: "06:25", destination: "Kecheri, Parapur, Pavaratty, Chavakkad" },
-            { time: "06:30", destination: "Kecheri, Mattam, Pavaratty" },
-            { time: "06:40", destination: "Kecheri, Mundur, Kottekkad, Thrissur" },
-            { time: "06:45", destination: "Kecheri, Alur, Pavaratty" },
             { time: "06:45", destination: "Kecheri, Mundur, Kottekkad, Thrissur" },
             { time: "06:55", destination: "Kecheri, Kunnamkulam" },
-            { time: "07:05", destination: "Kecheri" },
-            { time: "07:10", destination: "Kecheri" },
+            { time: "07:05", destination: "Kecheri, Pavaratty" },
             { time: "07:15", destination: "Kecheri, Kunnamkulam" },
-            { time: "07:20", destination: "Kecheri" },
-            { time: "07:25", destination: "Kecheri, Kaiparambu,Parapur" },
-            { time: "07:30", destination: "Kecheri, Guruvayur" },
-            { time: "07:35", destination: "Kecheri, Kaipuram" },
-            { time: "07:50", destination: "Kecheri" },
-            { time: "08:00", destination: "Kecheri" },
-            { time: "08:05", destination: "Kecheri" },
-{ time: "08:10", destination: "Kecheri, Matam, Pavaratty" },
-{ time: "08:20", destination: "Kecheri, Guruvayur" },
-{ time: "08:30", destination: "Kecheri, Alur, Pavaratty" },
-{ time: "08:45", destination: "Kecheri, Kunnamkulam, Pavaratty" },
-{ time: "08:50", destination: "Kecheri, Alur, Parapur" },
-{ time: "09:05", destination: "Kecheri, Choondal, Pavaratty" },
-{ time: "09:20", destination: "Kecheri, Choondal, Pavaratty" },
-{ time: "09:30", destination: "Kecheri" },
-{ time: "09:35", destination: "Kecheri, Kaiparam, Parapur, Orakam" },
-{ time: "09:50", destination: "Kecheri, Matam, Pavaratty" },
-{ time: "09:55", destination: "Kecheri, Alur, Pavaratty" },
-{ time: "10:05", destination: "Kecheri" },
-{ time: "10:10", destination: "Kecheri" },
-{ time: "10:25", destination: "Kecheri" },
-{ time: "10:35", destination: "Kecheri" },
-{ time: "10:40", destination: "Kecheri, Mundur, Kottekkad, Thrissur" },
-{ time: "10:45", destination: "Kecheri, Alur, Pavaratty" },
-{ time: "10:55", destination: "Kecheri" },
-{ time: "11:10", destination: "Kecheri, Guruvayur" },
-{ time: "11:20", destination: "Kecheri" },
-{ time: "11:25", destination: "Kecheri, Matam, Pavaratty" },
-{ time: "11:30", destination: "Kecheri" },
-{ time: "11:35", destination: "Kecheri, Mattam, Pavarati, Enamavu" },
-{ time: "11:45", destination: "Kecheri, Kaiparambu, Parapur, Pavaratty" },
-{ time: "11:50", destination: "Kecheri" },
-{ time: "12:05", destination: "Kecheri" },
-{ time: "12:10", destination: "Kecheri" },
-{ time: "12:15", destination: "Kecheri" },
-{ time: "12:40", destination: "Kecheri, Matam, Pavaratty, Enamavu" },
-{ time: "13:00", destination: "Kecheri" },
-{ time: "13:10", destination: "Kecheri, Kaiparam, Parapur, Enammavu, (Toyakavu)" },
-{ time: "13:20", destination: "Kecheri, Alur, Pavaratty" },
-{ time: "13:30", destination: "Kecheri" },
-{ time: "13:35", destination: "Kecheri, Kaiparambu, Parapur, Enamavu" },
-{ time: "13:45", destination: "Kecheri, Matam, Pavaratty" },
-{ time: "14:10", destination: "Kecheri, Alur, Pavaratty" },
-{ time: "14:20", destination: "Kecheri, Alur, Pavaratty" },
-{ time: "14:30", destination: "Kecheri, Alur, Pavaratty" },
-{ time: "14:40", destination: "Kecheri, Matam, Pavaratty" },
-{ time: "14:50", destination: "Kecheri" },
-{ time: "15:05", destination: "Kecheri" },
-{ time: "15:20", destination: "Kecheri, Kaiparambu, Parapur, Pavaratty, Chavakkad" },
-{ time: "15:35", destination: "Kecheri" },
-{ time: "15:40", destination: "Kecheri, Guruvayur" },
-{ time: "15:50", destination: "Kecheri, Guruvayur" },
-{ time: "16:05", destination: "Kecheri" },
-{ time: "16:20", destination: "Kecheri, Mundur, Kottekkad, Thrissur" },
-{ time: "16:30", destination: "Kecheri, Kaiparambu, Ponnore, Parapur" },
-{ time: "16:45", destination: "Kecheri, Kunnamkulam, Guruvayur" },
-{ time: "16:50", destination: "Kecheri, Taiyoor" },
-{ time: "16:55", destination: "Kecheri, Guruvayur" },
-{ time: "17:05", destination: "Kiralur, Mundur, Thrissur" },
-{ time: "17:10", destination: "Kecheri, Mattam, Pavaratty, Enamavu" },
-{ time: "17:20", destination: "Kecheri, Ponnore, Parapur, Orakam" },
-{ time: "17:30", destination: "Kecheri, Ponnore, Parapur" },
-{ time: "17:45", destination: "Kiralur-Thrissur" },
-{ time: "17:50", destination: "Kecheri, Parapur, Ponnore, Vadakancherry" },
-{ time: "17:50", destination: "Kecheri, Guruvayur" },
-{ time: "18:00", destination: "Kecheri, Alur, Pavaratty" },
-{ time: "18:15", destination: "Kecheri, Mundur, Kottekkad, Thrissur" }
+            { time: "07:30", destination: "Kecheri, Guruvayur ( via Choondal Hospital )" },
+            { time: "07:35", destination: "Kecheri, Kaiparambi, Parappur, Pavaratty (via Elavally)" },
+            { time: "07:35", destination: "Kecheri, Aloor, Pavaratty" },
+            { time: "07:40", destination: "Kecheri, Guruvayoor (KSRTC)" },
+            { time: "07:40", destination: "Kunnamkulam, Guruvayoor" },
+            { time: "08:00", destination: "Kecheri, Guruvayoor" },
+            { time: "08:05", destination: "Kecheri, Kunnamkulam" },
+            { time: "08:10", destination: "Kecheri, Matam, Pavaratty" },
+            { time: "08:20", destination: "Kecheri, Guruvayur" },
+            { time: "08:30", destination: "Kecheri, Alur, Pavaratty" },
+            { time: "08:45", destination: "Kecheri, Kunnamkulam, Pavaratty" },
+            { time: "08:50", destination: "Kecheri, Alur, Parapur" },
+            { time: "09:05", destination: "Kecheri, Ponnore, Parappur, Enamavu, Thoykavu" },
+            { time: "09:20", destination: "Kecheri, Choondal, Pavaratty" },
+            { time: "09:30", destination: "Kecheri" },
+            { time: "09:35", destination: "Kecheri, Kaiparam, Parapur, Oorakam" },
+            { time: "09:50", destination: "Kecheri, Matam, Pavaratty ( via Choondal Hospital )" },
+            { time: "09:55", destination: "Kecheri, Alur, Pavaratty" },
+            { time: "10:00", destination: "Kecheri" },
+            { time: "10:10", destination: "Kecheri, Kaiparambu, Chavakkadu" },
+            { time: "10:20", destination: "Kecheri, Pavaratty ( via Choondal Hospital )" },
+            { time: "10:30", destination: "Kecheri" },
+            { time: "10:40", destination: "Kechery, Aloor, Pavaratty" },
+            { time: "10:55", destination: "Kecheri, Mundur, Kottekkad, Thrissur" },
+            { time: "11:10", destination: "Kecheri, Guruvayur" },
+            { time: "11:20", destination: "Kecheri" },
+            { time: "11:35", destination: "Kecheri, Mattam, Pavaratty, Enamavu" },
+            { time: "11:45", destination: "Kecheri, Kaiparambu, Parapur, Pavaratty" },
+            { time: "11:55", destination: "Kecheri" },
+            { time: "12:05", destination: "Kecheri, Aloor, Pavaratty" },
+            { time: "12:10", destination: "Kecheri, Kunnamkulam, Guruvayoor" },
+            { time: "12:15", destination: "Kecheri" },
+            { time: "12:40", destination: "Kecheri, Matam, Pavaratty, Enamavu" },
+            { time: "13:00", destination: "Kecheri" },
+            { time: "13:10", destination: "Kecheri, Kaiparambu, Parapur, Oorakam" },
+            { time: "13:20", destination: "Kecheri" },
+            { time: "13:35", destination: "Kecheri, Kaiparambu, Parapur, Enamavu (via Thoykavu )" },
+            { time: "13:45", destination: "Kecheri" },
+            { time: "13:50", destination: "Kecheri, Mattam, Pavaratty" },
+            { time: "14:10", destination: "Kecheri, Alur, Pavaratty ( via Choondal Hospital )" },
+            { time: "14:30", destination: "Kecheri, Alur, Pavaratty ( via Choondal Hospital )" },
+            { time: "14:40", destination: "Kecheri, Matam, Pavaratty" },
+            { time: "14:50", destination: "Kecheri" },
+            { time: "15:05", destination: "Kecheri" },
+            { time: "15:20", destination: "Kecheri, Kaiparambu, Parapur, Pavaratty, Chavakkad" },
+            { time: "15:35", destination: "Kecheri" },
+            { time: "15:40", destination: "Kecheri, Guruvayur" },
+            { time: "15:50", destination: "Kecheri, Guruvayur" },
+            { time: "16:05", destination: "Kecheri" },
+            { time: "16:20", destination: "Kecheri, Mundur, Kottekkad, Thrissur" },
+            { time: "16:30", destination: "Kecheri, Kaiparambu, Ponnore, Parapur" },
+            { time: "16:45", destination: "Kecheri, Kunnamkulam, Guruvayur" },
+            { time: "16:50", destination: "Kecheri, Thaiyoor" },
+            { time: "16:55", destination: "Kecheri, Guruvayur" },
+            { time: "17:10", destination: "Kecheri, Mattam, Pavaratty, Enamavu" },
+            { time: "17:20", destination: "Kecheri, Ponnore, Parapur, Oorakam" },
+            { time: "17:30", destination: "Kecheri, Ponnore, Parapur, Pangu, Thoykavu" },
+            { time: "17:45", destination: "Kechery" },
+            { time: "17:50", destination: "Kecheri, Guruvayur" },
+            { time: "17:50", destination: "Kecheri, Parapur, Ponnore ( via Elavally ), Pavaratty" },
+            { time: "18:05", destination: "Kecheri" },
+            { time: "18:15", destination: "Kecheri, Mattom, Pavaratty" },
+            { time: "18:30", destination: "Kecheri, Mattom, Pavaratty" },
+            { time: "18:45", destination: "Kecheri, Mattom, Pavaratty ( via Choondal Hospital )" },
+            { time: "19:05", destination: "Kecheri" },
+            { time: "19:10", destination: "Kecheri" },
+            { time: "19:20", destination: "Kecheri" },
+            { time: "19:25", destination: "Kaiparambu, Parappur" },
+            { time: "19:50", destination: "Kecheri" },
+            { time: "20:00", destination: "Kecheri" },
+            { time: "20:05", destination: "Kecheri" },
 ];
 function getNextBusTime(currentTime, busTimes) {
         for (const bus of busTimes) {
