updated thrissur twoards route

--- a/routes/kcy-tcr.html
+++ b/routes/kcy-tcr.html
@@ -194,12 +194,19 @@
     { time: "06:40", destination: "Kecheri, Mundur, Kottekkad, Thrissur" },
     { time: "07:25", destination: "Kiralur, Thrissur" },
     { time: "07:45", destination: "Kiralur, Mundur, Thrissur" },
-    { time: "10:40", destination: "Kiralur, Thrissur" },
-    { time: "10:55", destination: "Kiralur, Thrissur" },
-    { time: "11:25", destination: "Kiralur, Thrissur, Arampilly" },
+    { time: "08:15", destination: "Arampilly, Thrissur" },
+    { time: "09:10", destination: "Kiralur, Thrissur" },
+    { time: "10:25", destination: "Kiralur, Thrissur" },
+    { time: "10:40", destination: "Arampilly, Thrissur" },
+    { time: "10:55", destination: "Kechery, Mundur, Kottekad, Thrissur" },
+    { time: "11:25", destination: "Kiralur, Thrissur" },
+    { time: "11:30", destination: "Arampilly, Thrissur" },
+    { time: "13:10", destination: "Kiralur, Mundur, Thrissur" },
+    { time: "14:20", destination: "Arampilly, Thrissur" },
     { time: "15:25", destination: "Kiralur, Thrissur" },
     { time: "15:45", destination: "Arampilly, Thrissur" },
-    { time: "17:45", destination: "Kiralur-Thrissur" }
+    { time: "16:20", destination: "Kechery, Mundur, Kottekad, Thrissur" },
+    { time: "17:05", destination: "Kiralur, Mundur, Thrissur" }
 ];
 
         // Function to get the next bus time
