--- a/routes/kcy-wky.html
+++ b/routes/kcy-wky.html
@@ -167,43 +167,32 @@
     <button class="button" onclick="redirectToFullTimeTable()">View Full Time Table</button>
     <script>
         const busTimes = [
-    { time: "05:00", destination: "Vadakanchery", viaVazhani: false },
-    { time: "05:10", destination: "Vadakanchery", viaVazhani: false },
-    { time: "05:15", destination: "Vadakanchery", viaVazhani: false },
-    { time: "05:30", destination: "Vadakanchery", viaVazhani: false },
-    { time: "05:45", destination: "Vadakancheri Vazhani", viaVazhani: true },
-    { time: "05:55", destination: "Vadakanchery", viaVazhani: false },
-    { time: "06:00", destination: "Vadakanchery", viaVazhani: false },
-    { time: "06:10", destination: "Vadakanchery", viaVazhani: false },
-    { time: "06:25", destination: "Vadakanchery", viaVazhani: false },
-    { time: "06:40", destination: "Vadakanchery", viaVazhani: false },
+    { time: "06:15", destination: "Vadakanchery", viaVazhani: false },
     { time: "06:50", destination: "Vadakancherry", viaVazhani: false },
     { time: "07:05", destination: "Vadakanchery", viaVazhani: false },
-    { time: "07:10", destination: "Vadakanchery", viaVazhani: false },
-    { time: "07:15", destination: "Vadakanchery", viaVazhani: false },
     { time: "07:20", destination: "Vadakanchery", viaVazhani: false },
-    { time: "07:30", destination: "Vadakanchery", viaVazhani: false },
     { time: "07:35", destination: "Vadakanchery", viaVazhani: false },
     { time: "07:50", destination: "Vadakanchery", viaVazhani: false },
     { time: "08:00", destination: "Vadakanchery", viaVazhani: false },
-    { time: "08:10", destination: "Vadakancherry", viaVazhani: false },
-    { time: "08:15", destination: "Vadakanchery", viaVazhani: false },
+    { time: "08:10", destination: "Vadakanchery", viaVazhani: false },
+    { time: "08:15", destination: "Vadakanchery ( via Attathara, Kumblangad )", viaVazhani: false },
     { time: "08:25", destination: "Vadakanchery", viaVazhani: false },
-    { time: "08:35", destination: "Vadakanchery", viaVazhani: false },
+    { time: "08:35", destination: "Vadakancherry", viaVazhani: false },
     { time: "08:45", destination: "Vadakanchery", viaVazhani: false },
     { time: "08:50", destination: "Vadakanchery", viaVazhani: false },
     { time: "09:05", destination: "Vadakanchery", viaVazhani: false },
     { time: "09:20", destination: "Vadakanchery", viaVazhani: false },
-    { time: "09:25", destination: "Vadakanchery", viaVazhani: false },
+    { time: "09:25", destination: "Chelakkara, Pazhayannur, Palakkad ( KSRTC )", viaVazhani: false },
+    { time: "09:05", destination: "Vadakanchery", viaVazhani: false },
+    { time: "09:25", destination: "Mundathikode - Medical Collage", viaVazhani: false },
     { time: "09:40", destination: "Vadakanchery", viaVazhani: false },
     { time: "09:50", destination: "Vadakanchery", viaVazhani: false },
-    { time: "10:00", destination: "Vadakancherry", viaVazhani: false },
-    { time: "10:05", destination: "Vadakanchery", viaVazhani: false },
+    { time: "10:00", destination: "Vadakancherry, Chelakkara, Amballur", viaVazhani: false },
+    { time: "10:05", destination: "Medical Collage, Thirssur", viaVazhani: false },
     { time: "10:10", destination: "Vadakanchery", viaVazhani: false },
-    { time: "10:20", destination: "Vadakanchery", viaVazhani: false },
     { time: "10:25", destination: "Vadakanchery", viaVazhani: false },
     { time: "10:35", destination: "Vadakanchery", viaVazhani: false },
-    { time: "10:45", destination: "Vadakanchery", viaVazhani: false },
+    { time: "10:45", destination: "Vadakanchery - Vazhani", viaVazhani: false },
     { time: "10:55", destination: "Vadakanchery", viaVazhani: false },
     { time: "11:10", destination: "Vadakanchery", viaVazhani: false },
     { time: "11:20", destination: "Vadakanchery", viaVazhani: false },
@@ -211,53 +200,45 @@
     { time: "11:55", destination: "Vadakanchery", viaVazhani: false },
     { time: "12:10", destination: "Vadakancheri", viaVazhani: false },
     { time: "12:25", destination: "Vadakancheri", viaVazhani: false },
-    { time: "12:30", destination: "Vadakancherry", viaVazhani: false },
+    { time: "12:30", destination: "Vadakancherry, ( via Attathara, Kumbalangad )", viaVazhani: false },
     { time: "12:45", destination: "Vadakanchery", viaVazhani: false },
     { time: "13:05", destination: "Vadakanchery", viaVazhani: false },
     { time: "13:15", destination: "Vadakanchery", viaVazhani: false },
     { time: "13:30", destination: "Vadakanchery", viaVazhani: false },
-    { time: "13:45", destination: "Vadakancheri Vazhani", viaVazhani: true },
+    { time: "13:45", destination: "Vadakancheri, Vazhani ( via Engangadu )", viaVazhani: true },
     { time: "14:00", destination: "Vadakanchery", viaVazhani: false },
-    { time: "14:15", destination: "Vadakancheri Vazhani", viaVazhani: true },
+    { time: "14:15", destination: "Vadakancheri, Vazhani", viaVazhani: true },
     { time: "14:30", destination: "Vadakanchery", viaVazhani: false },
     { time: "14:45", destination: "Vadakancherry", viaVazhani: false },
     { time: "14:55", destination: "Vadakanchery", viaVazhani: false },
-    { time: "15:05", destination: "Vadakanchery", viaVazhani: false },
+    { time: "15:05", destination: "Puthuruthy, Kumbangad, Vadakanchery", viaVazhani: false },
     { time: "15:10", destination: "Vadakanchery", viaVazhani: false },
     { time: "15:35", destination: "Vadakanchery", viaVazhani: false },
+    { time: "15:45", destination: "Vadakanchery", viaVazhani: false },
     { time: "15:50", destination: "Vadakancherry", viaVazhani: false },
     { time: "16:05", destination: "Vadakanchery", viaVazhani: false },
     { time: "16:15", destination: "Vadakancheri, Vazhani", viaVazhani: true },
     { time: "16:30", destination: "Vadakanchery", viaVazhani: false },
     { time: "16:45", destination: "Vadakanchery", viaVazhani: false },
+    { time: "17:00", destination: "Vadakanchery", viaVazhani: false },
     { time: "17:10", destination: "Vadakanchery", viaVazhani: false },
-    { time: "17:25", destination: "Vadakanchery", viaVazhani: false },
-    { time: "17:40", destination: "Vadakanchery", viaVazhani: false },
+    { time: "17:15", destination: "Vadakanchery, Chelakkara, Palakkad ( KSRTC )", viaVazhani: false },
+    { time: "17:30", destination: "Puthutruthy, Kumblangad, Vadakanchery", viaVazhani: false },
+    { time: "17:45", destination: "Vadakanchery, Vazhani", viaVazhani: true },
     { time: "17:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "18:00", destination: "Vadakanchery", viaVazhani: false },
     { time: "18:10", destination: "Vadakanchery", viaVazhani: false },
     { time: "18:25", destination: "Vadakanchery", viaVazhani: false },
     { time: "18:40", destination: "Vadakanchery", viaVazhani: false },
-    { time: "18:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "19:00", destination: "Vadakanchery", viaVazhani: false },
     { time: "19:10", destination: "Vadakanchery", viaVazhani: false },
-    { time: "19:25", destination: "Vadakanchery", viaVazhani: false },
-    { time: "19:40", destination: "Vadakanchery", viaVazhani: false },
-    { time: "19:55", destination: "Vadakanchery", viaVazhani: false },
+    { time: "19:15", destination: "Vadakanchery", viaVazhani: false },
+    { time: "19:30", destination: "Vadakanchery", viaVazhani: false },
+    { time: "19:35", destination: "Vadakanchery", viaVazhani: false },
+    { time: "19:50", destination: "Vadakanchery", viaVazhani: false },
     { time: "20:10", destination: "Vadakanchery", viaVazhani: false },
-    { time: "20:25", destination: "Vadakanchery", viaVazhani: false },
-    { time: "20:40", destination: "Vadakanchery", viaVazhani: false },
-    { time: "20:55", destination: "Vadakanchery", viaVazhani: false },
-    { time: "21:10", destination: "Vadakanchery", viaVazhani: false },
-    { time: "21:25", destination: "Vadakanchery", viaVazhani: false },
-    { time: "21:40", destination: "Vadakanchery", viaVazhani: false },
-    { time: "21:55", destination: "Vadakanchery", viaVazhani: false },
-    { time: "22:10", destination: "Vadakanchery", viaVazhani: false },
-    { time: "22:25", destination: "Vadakanchery", viaVazhani: false },
-    { time: "22:40", destination: "Vadakanchery", viaVazhani: false },
-    { time: "22:55", destination: "Vadakanchery", viaVazhani: false },
-    { time: "23:10", destination: "Vadakanchery", viaVazhani: false },
-    { time: "23:25", destination: "Vadakanchery", viaVazhani: false },
-    { time: "23:40", destination: "Vadakanchery", viaVazhani: false },
-    { time: "23:55", destination: "Vadakanchery", viaVazhani: false }
+    { time: "20:25", destination: "Velur Chungam", viaVazhani: false },
+    { time: "20:40", destination: "Velur Chungam", viaVazhani: false },
     ];
 
 
