changed all to toawrds

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
         <h1>Bussily - Velur Bus Routes</h1>
         <h2>Select Route</h2>
         <div class="route">
-            <a href="./routes/kcy-wky.html">Kechery to Vadakanchery</a>
+            <a href="./routes/kcy-wky.html">Towards Vadakkanchery</a>
         </div>
         <div class="route">
-            <a href="./routes/wky-kcy.html">Vadakanchery to Kechery</a>
+            <a href="./routes/wky-kcy.html">Towards Kechery</a>
         </div>
         <div class="route">
-            <a href="./routes/kcy-tcr.html">Kechery to Thrissur</a>
+            <a href="./routes/kcy-tcr.html">Towards Thrissur</a>
         </div>
     </div>
     
