--- a/routes/kcy-tcr.html
+++ b/routes/kcy-tcr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bussily - Kechery to Thrissur</title>
+    <title>Bussily - Towards Thrissur</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap">
     <link rel="icon" type="image/png" href="../images/icon.png">
@@ -178,7 +178,7 @@
 </head>
 <body>
     <h1>Bussily</h1>
-    <h2>Kechery to Thrissur</h2>
+    <h2>Towards Thrissur</h2>
     <div class="next-bus" id="nextBus">
         <!-- Next arriving bus will be shown here -->
     </div>
