--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="KAwFAr98eXBPBrvSEwdHdLe6Ml5cBmAfJigW6RmgNqo" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bussily - Velur Bus Routes</title>
