--- a/routes/kcy-wky.html
+++ b/routes/kcy-wky.html
@@ -205,9 +205,9 @@
     { time: "13:05", destination: "Vadakanchery", viaVazhani: false },
     { time: "13:15", destination: "Vadakanchery", viaVazhani: false },
     { time: "13:30", destination: "Vadakanchery", viaVazhani: false },
-    { time: "13:45", destination: "Vadakancheri, Vazhani ( via Engangadu )", viaVazhani: true },
+    { time: "13:45", destination: "Vadakancheri, Vazhani ( via Engangadu )", viaVazhani: false },
     { time: "14:00", destination: "Vadakanchery", viaVazhani: false },
-    { time: "14:15", destination: "Vadakancheri, Vazhani", viaVazhani: true },
+    { time: "14:15", destination: "Vadakancheri, Vazhani", viaVazhani: false },
     { time: "14:30", destination: "Vadakanchery", viaVazhani: false },
     { time: "14:45", destination: "Vadakancherry", viaVazhani: false },
     { time: "14:55", destination: "Vadakanchery", viaVazhani: false },
@@ -217,14 +217,14 @@
     { time: "15:45", destination: "Vadakanchery", viaVazhani: false },
     { time: "15:50", destination: "Vadakancherry", viaVazhani: false },
     { time: "16:05", destination: "Vadakanchery", viaVazhani: false },
-    { time: "16:15", destination: "Vadakancheri, Vazhani", viaVazhani: true },
+    { time: "16:15", destination: "Vadakancheri, Vazhani", viaVazhani: false },
     { time: "16:30", destination: "Vadakanchery", viaVazhani: false },
     { time: "16:45", destination: "Vadakanchery", viaVazhani: false },
     { time: "17:00", destination: "Vadakanchery", viaVazhani: false },
     { time: "17:10", destination: "Vadakanchery", viaVazhani: false },
     { time: "17:15", destination: "Vadakanchery, Chelakkara, Palakkad ( KSRTC )", viaVazhani: false },
     { time: "17:30", destination: "Puthutruthy, Kumblangad, Vadakanchery", viaVazhani: false },
-    { time: "17:45", destination: "Vadakanchery, Vazhani", viaVazhani: true },
+    { time: "17:45", destination: "Vadakanchery, Vazhani", viaVazhani: tfalse },
     { time: "17:55", destination: "Vadakanchery", viaVazhani: false },
     { time: "18:00", destination: "Vadakanchery", viaVazhani: false },
     { time: "18:10", destination: "Vadakanchery", viaVazhani: false },
